--- a/pkg/api/multiarchbuildconfig/v1/ci.openshift.io_multiarchbuildconfigs.yaml
+++ b/pkg/api/multiarchbuildconfig/v1/ci.openshift.io_multiarchbuildconfigs.yaml
@@ -2255,6 +2255,20 @@ spec:
                 required:
                 - strategy
                 type: object
+              output:
+                description: output describes the container image the MultiArchBuildConfig
+                  should produce.
+                properties:
+                  to:
+                    description: 'to defines a list of optional location to push the
+                      output of this build to. A location must be a full registry
+                      path, ex.: myregistry.com/myimage:latest.'
+                    items:
+                      type: string
+                    maxItems: 5
+                    minItems: 1
+                    type: array
+                type: object
             required:
             - build_spec
             type: object
