Add possibility to mark deprecated bundles as optional
Needed for pipelines

Signed-off-by: Jakub Guzik <jguzik@redhat.com>

--- a/test/integration/ci-operator-prowgen/input/config/super/duper/super-duper-master.yaml
+++ b/test/integration/ci-operator-prowgen/input/config/super/duper/super-duper-master.yaml
@@ -18,6 +18,7 @@ operator:
   - as: my-bundle
     context_dir: manifests
     dockerfile_path: bundle.Dockerfile
+    optional: true
 promotion:
   name: other
   namespace: ocp
