--- a/images/multi-arch-builder-controller/Dockerfile
+++ b/images/multi-arch-builder-controller/Dockerfile
@@ -2,4 +2,5 @@ FROM quay.io/centos/centos:stream8
 
 ADD manifest-tool /usr/bin/manifest-tool
 ADD multi-arch-builder-controller /usr/bin/multi-arch-builder-controller
+ADD oc /usr/bin/oc
 ENTRYPOINT ["/usr/bin/multi-arch-builder-controller"]
