handle PR review

--- a/pkg/api/multiarchbuildconfig/v1/ci.openshift.io_multiarchbuildconfigs.yaml
+++ b/pkg/api/multiarchbuildconfig/v1/ci.openshift.io_multiarchbuildconfigs.yaml
@@ -2255,20 +2255,13 @@ spec:
                 required:
                 - strategy
                 type: object
-              output:
-                description: output describes the container image the MultiArchBuildConfig
-                  should produce.
-                properties:
-                  to:
-                    description: 'to defines a list of optional location to push the
-                      output of this build to. A location must be a full registry
-                      path, ex.: myregistry.com/myimage:latest.'
-                    items:
-                      type: string
-                    maxItems: 5
-                    minItems: 1
-                    type: array
-                type: object
+              external_registries:
+                description: ExternalRegistries is a list of external registrie URLs
+                  the images are going to be pushed to. Private registries are allows
+                  as long as the mabc controller holds valid credentials.
+                items:
+                  type: string
+                type: array
             required:
             - build_spec
             type: object
