--- a/pkg/steps/multi_stage/testdata/zz_fixture_TestGeneratePods.yaml
+++ b/pkg/steps/multi_stage/testdata/zz_fixture_TestGeneratePods.yaml
@@ -80,6 +80,8 @@
         value: /var/run/secrets/ci.openshift.io/multi-stage/kubeconfig-minimal
       - name: KUBEADMIN_PASSWORD_FILE
         value: /var/run/secrets/ci.openshift.io/multi-stage/kubeadmin-password
+      - name: CLUSTER_PROFILE_NAME
+        value: aws
       - name: CLUSTER_TYPE
         value: aws
       - name: CLUSTER_PROFILE_DIR
@@ -249,6 +251,8 @@
         value: /var/run/secrets/ci.openshift.io/multi-stage/kubeconfig-minimal
       - name: KUBEADMIN_PASSWORD_FILE
         value: /var/run/secrets/ci.openshift.io/multi-stage/kubeadmin-password
+      - name: CLUSTER_PROFILE_NAME
+        value: aws
       - name: CLUSTER_TYPE
         value: aws
       - name: CLUSTER_PROFILE_DIR
@@ -411,6 +415,8 @@
         value: /var/run/secrets/ci.openshift.io/multi-stage/kubeconfig-minimal
       - name: KUBEADMIN_PASSWORD_FILE
         value: /var/run/secrets/ci.openshift.io/multi-stage/kubeadmin-password
+      - name: CLUSTER_PROFILE_NAME
+        value: aws
       - name: CLUSTER_TYPE
         value: aws
       - name: CLUSTER_PROFILE_DIR
@@ -579,6 +585,8 @@
         value: /var/run/secrets/ci.openshift.io/multi-stage/kubeconfig-minimal
       - name: KUBEADMIN_PASSWORD_FILE
         value: /var/run/secrets/ci.openshift.io/multi-stage/kubeadmin-password
+      - name: CLUSTER_PROFILE_NAME
+        value: aws
       - name: CLUSTER_TYPE
         value: aws
       - name: CLUSTER_PROFILE_DIR
