`MultiArchBuilderController`: push to external registries (#3676)
* feat: load kube config from multiple sources

* mabc: add .spec.output

* mabc: push manifest conditions

* mabc: mirror image

* mabc: add oc to image

* chore: make verify

* handle PR review

--- a/pkg/api/multiarchbuildconfig/v1/ci.openshift.io_multiarchbuildconfigs.yaml
+++ b/pkg/api/multiarchbuildconfig/v1/ci.openshift.io_multiarchbuildconfigs.yaml
@@ -2255,6 +2255,13 @@ spec:
                 required:
                 - strategy
                 type: object
+              external_registries:
+                description: ExternalRegistries is a list of external registrie URLs
+                  the images are going to be pushed to. Private registries are allows
+                  as long as the mabc controller holds valid credentials.
+                items:
+                  type: string
+                type: array
             required:
             - build_spec
             type: object
