"Increase timeouts for payload jobs to land k8s 1.29"
This reverts commit 642090c9ea047b63cddfac8471618d6cb498efad.

--- a/pkg/controller/prpqr_reconciler/testdata/zz_fixture_prowjobs_TestReconcile_basic_case.yaml
+++ b/pkg/controller/prpqr_reconciler/testdata/zz_fixture_prowjobs_TestReconcile_basic_case.yaml
@@ -25,6 +25,7 @@
     cluster: cluster-name-defaulted
     decoration_config:
       skip_cloning: true
+      timeout: 6h0m0s
     extra_refs:
     - base_ref: test-branch
       base_sha: "123456"
