Fix mistake in assiging remaining-required to pipeline opt jobs
Signed-off-by: Jakub Guzik <jguzik@redhat.com>

--- a/pkg/prowgen/testdata/zz_fixture_TestGeneratePresubmitForTest_presubmit_with_always_run_but_pipeline_run_if_changed_set.yaml
+++ b/pkg/prowgen/testdata/zz_fixture_TestGeneratePresubmitForTest_presubmit_with_always_run_but_pipeline_run_if_changed_set.yaml
@@ -13,4 +13,4 @@ labels:
   pj-rehearse.openshift.io/can-be-rehearsed: "true"
 name: pull-ci-org-repo-branch-testname
 rerun_command: /test testname
-trigger: (?m)^/test( | .* )(testname|remaining-required),?($|\s.*)
+trigger: (?m)^/test( | .* )testname,?($|\s.*)
