--- a/pkg/controller/prpqr_reconciler/testdata/zz_fixture_prpqr_TestReconcile_basic_case_with_vsphere_override.yaml
+++ b/pkg/controller/prpqr_reconciler/testdata/zz_fixture_prpqr_TestReconcile_basic_case_with_vsphere_override.yaml
@@ -17,8 +17,8 @@
           org: test-org
           repo: test-repo
         test: test-name-vsphere
-    pullRequest:
-      baseRef: test-branch
+    pullRequests:
+    - baseRef: test-branch
       baseSHA: "123456"
       org: test-org
       pr:
