--- a/pkg/controller/prpqr_reconciler/pjstatussyncer/testdata/zz_fixture_prpqr_TestReconcile_job_is_still_running.yaml
+++ b/pkg/controller/prpqr_reconciler/pjstatussyncer/testdata/zz_fixture_prpqr_TestReconcile_job_is_still_running.yaml
@@ -11,16 +11,7 @@
         release: ""
         specifier: ""
       releaseJobSpec: null
-    pullRequest:
-      baseRef: ""
-      baseSHA: ""
-      org: ""
-      pr:
-        author: ""
-        number: 0
-        sha: ""
-        title: ""
-      repo: ""
+    pullRequests: null
   status:
     conditions:
     - lastTransitionTime: "1970-01-01T00:00:00Z"
