--- a/test/e2e/multi-stage/configs/master/test-another-master.yaml
+++ b/test/e2e/multi-stage/configs/master/test-another-master.yaml
@@ -2,7 +2,10 @@ base_images:
   os:
     name: centos
     namespace: openshift
-    tag: '7'
+    tag: 'stream9'
+images:
+  - from: os
+    to: another-os
 build_root:
   image_stream_tag:
     name: release
@@ -22,4 +25,4 @@ tests:
 zz_generated_metadata:
   branch: master
   org: test
-  repo: test
+  repo: another
