Add the ability to override the base payload by providing pullspecs for "initial" and/or "latest"

--- a/pkg/controller/prpqr_reconciler/pjstatussyncer/testdata/zz_fixture_prpqr_TestReconcile_basic_case.yaml
+++ b/pkg/controller/prpqr_reconciler/pjstatussyncer/testdata/zz_fixture_prpqr_TestReconcile_basic_case.yaml
@@ -11,6 +11,7 @@
         release: ""
         specifier: ""
       releaseJobSpec: null
+    payload: {}
     pullRequests: null
   status:
     conditions:
