--- a/pkg/controller/prpqr_reconciler/testdata/zz_fixture_prpqr_TestReconcile_basic_case_with_variant.yaml
+++ b/pkg/controller/prpqr_reconciler/testdata/zz_fixture_prpqr_TestReconcile_basic_case_with_variant.yaml
@@ -18,6 +18,7 @@
           repo: test-repo
           variant: test-variant
         test: test-name
+    payload: {}
     pullRequests:
     - baseRef: test-branch
       baseSHA: "123456"
