--- a/pkg/controller/prpqr_reconciler/testdata/zz_fixture_prpqr_TestReconcile_multiple_case__one_of_the_prowjobs_already_exists.yaml
+++ b/pkg/controller/prpqr_reconciler/testdata/zz_fixture_prpqr_TestReconcile_multiple_case__one_of_the_prowjobs_already_exists.yaml
@@ -22,6 +22,7 @@
           org: test-org
           repo: test-repo
         test: test-name-2
+    payload: {}
     pullRequests:
     - baseRef: test-branch
       baseSHA: "123456"
