--- a/pkg/controller/prpqr_reconciler/pjstatussyncer/testdata/zz_fixture_prpqr_TestReconcile_previous_condition_exists.yaml
+++ b/pkg/controller/prpqr_reconciler/pjstatussyncer/testdata/zz_fixture_prpqr_TestReconcile_previous_condition_exists.yaml
@@ -11,6 +11,7 @@
         release: ""
         specifier: ""
       releaseJobSpec: null
+    payload: {}
     pullRequests: null
   status:
     conditions:
