--- a/pkg/controller/prpqr_reconciler/testdata/zz_fixture_prpqr_TestReconcile_basic_case.yaml
+++ b/pkg/controller/prpqr_reconciler/testdata/zz_fixture_prpqr_TestReconcile_basic_case.yaml
@@ -17,6 +17,7 @@
           org: test-org
           repo: test-repo
         test: test-name
+    payload: {}
     pullRequests:
     - baseRef: test-branch
       baseSHA: "123456"
