image: add oc binary to pj-rehearse

--- a/images/pj-rehearse/Dockerfile
+++ b/images/pj-rehearse/Dockerfile
@@ -3,4 +3,5 @@ LABEL maintainer="nmoraiti@redhat.com"
 
 RUN yum install -y git && yum clean all
 ADD pj-rehearse /usr/bin/pj-rehearse
+ADD /usr/bin/oc /usr/bin/oc
 ENTRYPOINT ["/usr/bin/pj-rehearse"]
