chore: remove old promotion fields

--- a/cmd/registry-replacer/testdata/zz_fixture_TestReplacer_OCP_builder_pruning_happens.yaml
+++ b/cmd/registry-replacer/testdata/zz_fixture_TestReplacer_OCP_builder_pruning_happens.yaml
@@ -1,6 +1,7 @@
 promotion:
-  namespace: ocp
-  tag: "4.8"
+  to:
+  - namespace: ocp
+    tag: "4.8"
 zz_generated_metadata:
   branch: ""
   org: ""
