--- a/cmd/registry-replacer/testdata/zz_fixture_TestReplacer_Dockerfile_gets_fixed_up.yaml
+++ b/cmd/registry-replacer/testdata/zz_fixture_TestReplacer_Dockerfile_gets_fixed_up.yaml
@@ -6,8 +6,9 @@ images:
       - ocp/builder:something
   to: promotionTarget
 promotion:
-  name: "4.6"
-  namespace: ocp
+  to:
+  - name: "4.6"
+    namespace: ocp
 zz_generated_metadata:
   branch: master
   org: ""
