--- a/pkg/controller/prpqr_reconciler/testdata/zz_fixture_prowjobs_TestReconcile_multiple_PRs_from_different_repositories.yaml
+++ b/pkg/controller/prpqr_reconciler/testdata/zz_fixture_prowjobs_TestReconcile_multiple_PRs_from_different_repositories.yaml
@@ -12,8 +12,8 @@
       prow.k8s.io/job: test-org-test-repo-100-test-org-another-test-repo-101-test-name
       prow.k8s.io/refs.base_ref: test-branch
       prow.k8s.io/refs.org: test-org
-      prow.k8s.io/refs.pull: "100"
-      prow.k8s.io/refs.repo: test-repo
+      prow.k8s.io/refs.pull: "101"
+      prow.k8s.io/refs.repo: another-test-repo
       prow.k8s.io/type: periodic
       pullrequestpayloadqualificationruns.ci.openshift.io: prpqr-test
       releaseJobNameHash: ee3858eff62263cd7266320c00d1d38b
@@ -32,19 +32,19 @@
       org: test-org
       pulls:
       - author: test
-        number: 100
-        sha: "12345"
+        number: 101
+        sha: "123452"
         title: test-pr
-      repo: test-repo
+      repo: another-test-repo
     - base_ref: test-branch
       base_sha: "123456"
       org: test-org
       pulls:
       - author: test
-        number: 101
-        sha: "123452"
+        number: 100
+        sha: "12345"
         title: test-pr
-      repo: another-test-repo
+      repo: test-repo
     job: test-org-test-repo-100-test-org-another-test-repo-101-test-name
     pod_spec:
       containers:
