schedule multi_arch jobs to build10 and remove multi01 references
Signed-off-by: Nikolaos Moraitis <nmoraiti@redhat.com>

--- a/pkg/prowgen/testdata/zz_fixture_TestGeneratePostSubmitForPromotion_spawn_on_build10_cluster.yaml
+++ b/pkg/prowgen/testdata/zz_fixture_TestGeneratePostSubmitForPromotion_spawn_on_build10_cluster.yaml
@@ -2,12 +2,12 @@
   always_run: true
   branches:
   - ^branch$
-  cluster: multi01
+  cluster: build10
   decorate: true
   decoration_config:
     skip_cloning: true
   labels:
-    ci-operator.openshift.io/cluster: multi01
+    ci-operator.openshift.io/cluster: build10
     ci-operator.openshift.io/is-promotion: "true"
   max_concurrency: 1
   name: branch-ci-organization-repository-branch-images
