Updating image to be arch agnostic

--- a/images/dptp-3312-hypershift-leaks-cleaner/Dockerfile
+++ b/images/dptp-3312-hypershift-leaks-cleaner/Dockerfile
@@ -1,5 +1,6 @@
 FROM quay.io/centos/centos:stream8
 LABEL maintainer="bechen@redhat.com"
+RUN echo "ARCH=$(uname -m)"
 
 RUN yum install -y unzip jq
 
@@ -7,7 +8,7 @@ COPY hypershift /usr/bin/hypershift
 COPY oc /usr/bin/oc
 
 RUN cd /tmp && \
-    curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip" && \
+    curl "https://awscli.amazonaws.com/awscli-exe-linux-$ARCH.zip" -o "awscliv2.zip" && \
     unzip awscliv2.zip && \
     ./aws/install && \
     rm -rf awscliv2.zip aws
