Update base image of dptp-3312-hypershift-leaks-cleaner

--- a/images/dptp-3312-hypershift-leaks-cleaner/Dockerfile
+++ b/images/dptp-3312-hypershift-leaks-cleaner/Dockerfile
@@ -1,13 +1,12 @@
-FROM quay.io/centos/centos:stream8
+FROM registry.ci.openshift.org/ocp/4.17:hypershift-cli
 LABEL maintainer="bechen@redhat.com"
 
 RUN yum install -y unzip jq
 
-COPY hypershift /usr/bin/hypershift
 COPY oc /usr/bin/oc
 
 RUN cd /tmp && \
-    curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip" && \
+    curl "https://awscli.amazonaws.com/awscli-exe-linux-$(uname -m).zip" -o "awscliv2.zip" && \
     unzip awscliv2.zip && \
     ./aws/install && \
     rm -rf awscliv2.zip aws
