--- a/pkg/prowgen/testdata/zz_fixture_TestGenerateJobs_multiarch_postsubmit_images__default_arch_and_others.yaml
+++ b/pkg/prowgen/testdata/zz_fixture_TestGenerateJobs_multiarch_postsubmit_images__default_arch_and_others.yaml
@@ -1,20 +1,17 @@
 postsubmits:
   organization/repository:
   - always_run: true
+    cluster: build09
     labels:
+      ci-operator.openshift.io/cluster: build09
       ci-operator.openshift.io/is-promotion: "true"
     max_concurrency: 1
     name: branch-ci-organization-repository-branch-images
-  - always_run: true
-    cluster: arm01
-    labels:
-      ci-operator.openshift.io/cluster: arm01
-      ci-operator.openshift.io/is-promotion: "true"
-    max_concurrency: 1
-    name: branch-ci-organization-repository-branch-images-arm64
 presubmits:
   organization/repository:
   - always_run: false
+    cluster: build09
     labels:
+      ci-operator.openshift.io/cluster: build09
       pj-rehearse.openshift.io/can-be-rehearsed: "true"
     name: pull-ci-organization-repository-branch-images
