--- a/images/ci-secret-generator/Dockerfile
+++ b/images/ci-secret-generator/Dockerfile
@@ -1,4 +1,4 @@
-FROM quay.io/centos/centos:stream9
+FROM registry.access.redhat.com/ubi9/ubi-minimal:latest
 
 ARG JQ_VERSION=1.6
 
@@ -7,7 +7,7 @@ COPY usr/bin/oc /usr/bin/oc
 COPY oc_sa_create_kubeconfig.sh /usr/bin/oc_sa_create_kubeconfig.sh
 COPY oc_create_kubeconfig.sh /usr/bin/oc_create_kubeconfig.sh
 
-RUN dnf install -y jq
+RUN microdnf install -y jq
 
 ADD ci-secret-generator /usr/bin/ci-secret-generator
 
