--- a/images/group-auto-updater/Dockerfile
+++ b/images/group-auto-updater/Dockerfile
@@ -1,4 +1,4 @@
-FROM quay.io/centos/centos:stream9
+FROM registry.access.redhat.com/ubi9/ubi-minimal:latest
 LABEL maintainer="nmoraiti@redhat.com"
 
 ADD group-auto-updater /usr/bin/group-auto-updater
