--- a/images/job-run-aggregator/Dockerfile
+++ b/images/job-run-aggregator/Dockerfile
@@ -1,7 +1,7 @@
-FROM quay.io/centos/centos:stream9
+FROM registry.access.redhat.com/ubi9/ubi-minimal:latest
 LABEL maintainer="deads@redhat.com"
 
 ADD job-run-aggregator /usr/bin/job-run-aggregator
 ADD prcreator /usr/bin/prcreator
-RUN dnf install -y git
+RUN microdnf install -y git
 ENTRYPOINT ["/usr/bin/job-run-aggregator"]
