--- a/images/ocp-build-data-enforcer/Dockerfile
+++ b/images/ocp-build-data-enforcer/Dockerfile
@@ -1,8 +1,8 @@
-FROM quay.io/centos/centos:stream9
+FROM registry.access.redhat.com/ubi9/ubi-minimal:latest
 
-RUN yum install -y git && \
-    yum clean all && \
-    rm -rf /var/cache/yum
+RUN microdnf install -y git && \
+    microdnf clean all && \
+    rm -rf /var/cache/dnf
 
 ADD ocp-build-data-enforcer /usr/bin/ocp-build-data-enforcer
 ENTRYPOINT ["ocp-build-data-enforcer"]
