--- a/images/pipeline-controller/Dockerfile
+++ b/images/pipeline-controller/Dockerfile
@@ -1,4 +1,4 @@
-FROM quay.io/centos/centos:stream9
+FROM registry.access.redhat.com/ubi9/ubi-minimal:latest
 LABEL maintainer="jguzik@redhat.com"
 
 ADD pipeline-controller /usr/bin/pipeline-controller
