--- a/images/pj-rehearse/Dockerfile
+++ b/images/pj-rehearse/Dockerfile
@@ -1,7 +1,7 @@
-FROM quay.io/centos/centos:stream9
+FROM registry.access.redhat.com/ubi9/ubi-minimal:latest
 LABEL maintainer="nmoraiti@redhat.com"
 
-RUN yum install -y git && yum clean all
+RUN microdnf install -y git && microdnf clean all
 ADD pj-rehearse /usr/bin/pj-rehearse
 ADD /usr/bin/oc /usr/bin/oc
 ENTRYPOINT ["/usr/bin/pj-rehearse"]
