--- a/images/pr-reminder/Dockerfile
+++ b/images/pr-reminder/Dockerfile
@@ -1,4 +1,4 @@
-FROM quay.io/centos/centos:stream9
+FROM registry.access.redhat.com/ubi9/ubi-minimal:latest
 LABEL maintainer="sgoeddel@redhat.com"
 
 ADD pr-reminder /usr/bin/pr-reminder
