--- a/images/publicize/Dockerfile
+++ b/images/publicize/Dockerfile
@@ -1,8 +1,8 @@
-FROM quay.io/centos/centos:stream9
+FROM registry.access.redhat.com/ubi9/ubi-minimal:latest
 
 LABEL maintainer="nmoraiti@redhat.com"
 
-RUN yum install -y git
+RUN microdnf install -y git
 ADD publicize /usr/bin/publicize
 
 ENTRYPOINT ["/usr/bin/publicize"]
