--- a/images/registry-replacer/Dockerfile
+++ b/images/registry-replacer/Dockerfile
@@ -1,9 +1,9 @@
-FROM quay.io/centos/centos:stream9
+FROM registry.access.redhat.com/ubi9/ubi-minimal:latest
 LABEL maintainer="muller@redhat.com"
 
-RUN yum install -y git && \
-    yum clean all && \
-    rm -rf /var/cache/yum
+RUN microdnf install -y git && \
+    microdnf clean all && \
+    rm -rf /var/cache/dnf
 
 ADD registry-replacer /usr/bin/registry-replacer
 ENTRYPOINT ["/usr/bin/registry-replacer"]
