--- a/images/template-deprecator/Dockerfile
+++ b/images/template-deprecator/Dockerfile
@@ -1,8 +1,8 @@
-FROM quay.io/centos/centos:stream9
+FROM registry.access.redhat.com/ubi9/ubi-minimal:latest
 LABEL maintainer="muller@redhat.com"
 
-RUN dnf install -y diffutils && \
-      dnf clean all
+RUN microdnf install -y diffutils && \
+      microdnf clean all
 
 ADD template-deprecator /usr/bin/template-deprecator
 ENTRYPOINT ["/usr/bin/template-deprecator"]
