--- a/images/autoperibolossync/Dockerfile
+++ b/images/autoperibolossync/Dockerfile
@@ -1,10 +1,10 @@
-FROM quay.io/centos/centos:stream9
+FROM registry.access.redhat.com/ubi9/ubi-minimal:latest
 
 ADD private-org-peribolos-sync /usr/bin/private-org-peribolos-sync
 ADD autoperibolossync /usr/bin/autoperibolossync
 
-RUN yum install -y git && \
-    yum clean all && \
-    rm -rf /var/cache/yum
+RUN microdnf install -y git && \
+    microdnf clean all && \
+    rm -rf /var/cache/dnf
 
 ENTRYPOINT ["/usr/bin/autoperibolossync"]
