--- a/images/autopublicizeconfig/Dockerfile
+++ b/images/autopublicizeconfig/Dockerfile
@@ -1,10 +1,10 @@
-FROM quay.io/centos/centos:stream9
+FROM registry.access.redhat.com/ubi9/ubi-minimal:latest
 LABEL maintainer="nmoraiti@redhat.com"
 
 ADD autopublicizeconfig /usr/bin/autopublicizeconfig
 
-RUN yum install -y git && \
-    yum clean all && \
-    rm -rf /var/cache/yum
+RUN microdnf install -y git && \
+    microdnf clean all && \
+    rm -rf /var/cache/dnf
 
 ENTRYPOINT ["/usr/bin/autopublicizeconfig"]
