--- a/images/blocking-issue-creator/Dockerfile
+++ b/images/blocking-issue-creator/Dockerfile
@@ -1,4 +1,4 @@
-FROM quay.io/centos/centos:stream9
+FROM registry.access.redhat.com/ubi9/ubi-minimal:latest
 LABEL maintainer="skuznets@redhat.com"
 
 ADD blocking-issue-creator /usr/bin/blocking-issue-creator
