--- a/images/check-gh-automation/Dockerfile
+++ b/images/check-gh-automation/Dockerfile
@@ -1,6 +1,6 @@
-FROM quay.io/centos/centos:stream9
+FROM registry.access.redhat.com/ubi9/ubi-minimal:latest
 LABEL maintainer="sgoeddel@redhat.com"
 
-RUN dnf install -y git && dnf clean all
+RUN microdnf install -y git && microdnf clean all
 ADD check-gh-automation /usr/bin/check-gh-automation
 ENTRYPOINT ["/usr/bin/check-gh-automation"]
