--- a/images/ci-operator/Dockerfile
+++ b/images/ci-operator/Dockerfile
@@ -1,7 +1,6 @@
-FROM quay.io/centos/centos:stream9
+FROM registry.access.redhat.com/ubi9/ubi-minimal:latest
 
-RUN yum install -y git python3
-RUN alternatives --install /usr/bin/python python /usr/bin/python3.9 1
+RUN microdnf install -y git python3
 
 ADD manifest-tool /usr/bin/manifest-tool
 ADD ci-operator /usr/bin/ci-operator
