--- a/images/ci-secret-bootstrap/Dockerfile
+++ b/images/ci-secret-bootstrap/Dockerfile
@@ -1,4 +1,4 @@
-FROM quay.io/centos/centos:stream9
+FROM registry.access.redhat.com/ubi9/ubi-minimal:latest
 
 ADD ci-secret-bootstrap /usr/bin/ci-secret-bootstrap
 ENTRYPOINT ["/usr/bin/ci-secret-bootstrap"]
