--- a/images/config-change-trigger/Dockerfile
+++ b/images/config-change-trigger/Dockerfile
@@ -1,6 +1,6 @@
-FROM quay.io/centos/centos:stream9
+FROM registry.access.redhat.com/ubi9/ubi-minimal:latest
 LABEL maintainer="skuznets@redhat.com"
 
-RUN yum install -y git && yum clean all
+RUN microdnf install -y git && microdnf clean all
 ADD config-change-trigger /usr/bin/config-change-trigger
 ENTRYPOINT ["/usr/bin/config-change-trigger"]
