--- a/images/config-shard-validator/Dockerfile
+++ b/images/config-shard-validator/Dockerfile
@@ -1,8 +1,8 @@
-FROM quay.io/centos/centos:stream9
+FROM registry.access.redhat.com/ubi9/ubi-minimal:latest
 LABEL maintainer="skuznets@redhat.com"
 
-RUN dnf install --nogpg -y git && \
-      dnf clean all
+RUN microdnf install -y git && \
+      microdnf clean all
 
 ADD config-shard-validator /usr/bin/config-shard-validator
 ENTRYPOINT ["/usr/bin/config-shard-validator"]
