--- a/images/determinize-ci-operator/Dockerfile
+++ b/images/determinize-ci-operator/Dockerfile
@@ -1,8 +1,8 @@
-FROM quay.io/centos/centos:stream9
+FROM registry.access.redhat.com/ubi9/ubi-minimal:latest
 LABEL maintainer="skuznets@redhat.com"
 
-RUN dnf install --nogpg -y diffutils git && \
-      dnf clean all
+RUN microdnf install -y diffutils git && \
+      microdnf clean all
 
 ADD determinize-ci-operator /usr/bin/determinize-ci-operator
 ENTRYPOINT ["/usr/bin/determinize-ci-operator"]
