--- a/images/determinize-prow-config/Dockerfile
+++ b/images/determinize-prow-config/Dockerfile
@@ -1,8 +1,8 @@
-FROM quay.io/centos/centos:stream9
+FROM registry.access.redhat.com/ubi9/ubi-minimal:latest
 LABEL maintainer="skuznets@redhat.com"
 
-RUN dnf install --nogpg -y diffutils && \
-      dnf clean all
+RUN microdnf install -y diffutils && \
+      microdnf clean all
 
 ADD determinize-prow-config /usr/bin/determinize-prow-config
 ENTRYPOINT ["/usr/bin/determinize-prow-config"]
