--- a/images/dptp-controller-manager/Dockerfile
+++ b/images/dptp-controller-manager/Dockerfile
@@ -1,4 +1,4 @@
-FROM quay.io/centos/centos:stream9
+FROM registry.access.redhat.com/ubi9/ubi-minimal:latest
 LABEL maintainer="aaleman@<<this-products-parent-company-name>>.com"
 
 ADD dptp-controller-manager /usr/bin/dptp-controller-manager
