--- a/images/entrypoint-wrapper/Dockerfile
+++ b/images/entrypoint-wrapper/Dockerfile
@@ -1,4 +1,4 @@
-FROM quay.io/centos/centos:stream9
+FROM registry.access.redhat.com/ubi9/ubi-minimal:latest
 LABEL maintainer="bbarcaro@redhat.com"
 
 ADD entrypoint-wrapper /usr/bin/entrypoint-wrapper
