--- a/images/generate-registry-metadata/Dockerfile
+++ b/images/generate-registry-metadata/Dockerfile
@@ -1,9 +1,9 @@
-FROM quay.io/centos/centos:stream9
+FROM registry.access.redhat.com/ubi9/ubi-minimal:latest
 LABEL maintainer="apavel@redhat.com"
 
-RUN yum install -y diffutils && \
-    yum clean all && \
-    rm -rf /var/cache/yum
+RUN microdnf install -y diffutils && \
+    microdnf clean all && \
+    rm -rf /var/cache/dnf
 
 ADD generate-registry-metadata /usr/bin/generate-registry-metadata
 ENTRYPOINT ["/usr/bin/generate-registry-metadata"]
