--- a/images/gpu-scheduling-webhook/Dockerfile
+++ b/images/gpu-scheduling-webhook/Dockerfile
@@ -1,4 +1,4 @@
-FROM quay.io/centos/centos:stream9
+FROM registry.access.redhat.com/ubi9/ubi-minimal:latest
 LABEL maintainer="dgemoli@redhat.com"
 
 ADD gpu-scheduling-webhook /usr/bin/gpu-scheduling-webhook
