--- a/images/helpdesk-faq/Dockerfile
+++ b/images/helpdesk-faq/Dockerfile
@@ -1,4 +1,4 @@
-FROM quay.io/centos/centos:stream9
+FROM registry.access.redhat.com/ubi9/ubi-minimal:latest
 LABEL maintainer="sgoeddel@redhat.com"
 
 ADD helpdesk-faq /usr/bin/helpdesk-faq
