--- a/images/multi-arch-builder-controller/Dockerfile
+++ b/images/multi-arch-builder-controller/Dockerfile
@@ -1,4 +1,4 @@
-FROM quay.io/centos/centos:stream9
+FROM registry.access.redhat.com/ubi9/ubi-minimal:latest
 
 ADD manifest-tool /usr/bin/manifest-tool
 ADD multi-arch-builder-controller /usr/bin/multi-arch-builder-controller
