--- a/images/private-org-sync/Dockerfile
+++ b/images/private-org-sync/Dockerfile
@@ -1,7 +1,7 @@
-FROM quay.io/centos/centos:stream9
+FROM registry.access.redhat.com/ubi9/ubi-minimal:latest
 LABEL maintainer="nmoraiti@redhat.com"
 
-RUN yum install -y git && yum clean all
+RUN microdnf install -y git && microdnf clean all
 RUN git config --global core.compression 9
 
 ADD private-org-sync /usr/bin/private-org-sync
