--- a/images/private-prow-configs-mirror/Dockerfile
+++ b/images/private-prow-configs-mirror/Dockerfile
@@ -1,8 +1,8 @@
-FROM quay.io/centos/centos:stream9
+FROM registry.access.redhat.com/ubi9/ubi-minimal:latest
 LABEL maintainer="nmoraiti@redhat.com"
 
-RUN dnf install --nogpg -y git && \
-      dnf clean all
+RUN microdnf install -y git && \
+      microdnf clean all
 
 ADD private-prow-configs-mirror /usr/bin/private-prow-configs-mirror
 ENTRYPOINT ["/usr/bin/private-prow-configs-mirror"]
