--- a/images/repo-init/Dockerfile
+++ b/images/repo-init/Dockerfile
@@ -1,4 +1,4 @@
-FROM quay.io/centos/centos:stream9
+FROM registry.access.redhat.com/ubi9/ubi-minimal:latest
 LABEL maintainer="sgoeddel@redhat.com"
 
 ADD repo-init /usr/bin/repo-init
@@ -7,8 +7,8 @@ ADD ci-operator-checkconfig /usr/bin/ci-operator-checkconfig
 ADD ci-operator-prowgen /usr/bin/ci-operator-prowgen
 ADD sanitize-prow-jobs /usr/bin/sanitize-prow-jobs
 
-RUN yum install -y git && \
-    yum clean all && \
-    rm -rf /var/cache/yum
+RUN microdnf install -y git && \
+    microdnf clean all && \
+    rm -rf /var/cache/dnf
 
 ENTRYPOINT ["/usr/bin/repo-init"]
