--- a/images/result-aggregator/Dockerfile
+++ b/images/result-aggregator/Dockerfile
@@ -1,4 +1,4 @@
-FROM quay.io/centos/centos:stream9
+FROM registry.access.redhat.com/ubi9/ubi-minimal:latest
 LABEL maintainer="jchaloup@redhat.com"
 
 ADD result-aggregator /usr/bin/result-aggregator
