--- a/images/sanitize-prow-jobs/Dockerfile
+++ b/images/sanitize-prow-jobs/Dockerfile
@@ -1,8 +1,8 @@
-FROM quay.io/centos/centos:stream9
+FROM registry.access.redhat.com/ubi9/ubi-minimal:latest
 LABEL maintainer="muller@redhat.com"
 
-RUN dnf install --nogpg -y diffutils && \
-      dnf clean all
+RUN microdnf install -y diffutils && \
+      microdnf clean all
 
 ADD sanitize-prow-jobs /usr/bin/sanitize-prow-jobs
 ENTRYPOINT ["/usr/bin/sanitize-prow-jobs"]
