--- a/images/tide-config-manager/Dockerfile
+++ b/images/tide-config-manager/Dockerfile
@@ -1,4 +1,4 @@
-FROM quay.io/centos/centos:stream9
+FROM registry.access.redhat.com/ubi9/ubi-minimal:latest
 LABEL maintainer="jguzik@redhat.com"
 
 ADD tide-config-manager /usr/bin/tide-config-manager
