--- a/images/vault-subpath-proxy/Dockerfile
+++ b/images/vault-subpath-proxy/Dockerfile
@@ -1,4 +1,4 @@
-FROM quay.io/centos/centos:stream9
+FROM registry.access.redhat.com/ubi9/ubi-minimal:latest
 LABEL maintainer="muller@redhat.com"
 
 ADD vault-subpath-proxy /usr/bin/vault-subpath-proxy
