--- a/test/e2e/multi-stage/dependencies.yaml
+++ b/test/e2e/multi-stage/dependencies.yaml
@@ -1,8 +1,8 @@
 base_images:
   os:
-    name: centos
-    namespace: openshift
-    tag: 'stream9'
+    name: ubi-minimal
+    namespace: ocp
+    tag: '9'
 build_root:
   image_stream_tag:
     name: release
