--- a/images/job-run-aggregator/Dockerfile
+++ b/images/job-run-aggregator/Dockerfile
@@ -2,4 +2,5 @@ FROM quay.io/centos/centos:stream9
 LABEL maintainer="deads@redhat.com"
 
 ADD job-run-aggregator /usr/bin/job-run-aggregator
+ADD prcreator /usr/bin/prcreator
 ENTRYPOINT ["/usr/bin/job-run-aggregator"]
