install git for job-run-aggregator for weekly disruption PR

--- a/images/job-run-aggregator/Dockerfile
+++ b/images/job-run-aggregator/Dockerfile
@@ -3,4 +3,5 @@ LABEL maintainer="deads@redhat.com"
 
 ADD job-run-aggregator /usr/bin/job-run-aggregator
 ADD prcreator /usr/bin/prcreator
+RUN dnf install -y git
 ENTRYPOINT ["/usr/bin/job-run-aggregator"]
