--- a/pkg/controller/prpqr_reconciler/pjstatussyncer/testdata/zz_fixture_prpqr_TestReconcile_job_is_still_running.yaml
+++ b/pkg/controller/prpqr_reconciler/pjstatussyncer/testdata/zz_fixture_prpqr_TestReconcile_job_is_still_running.yaml
@@ -1,6 +1,4 @@
-- apiVersion: ci.openshift.io/v1
-  kind: PullRequestPayloadQualificationRun
-  metadata:
+- metadata:
     creationTimestamp: null
     name: prpqr-test
     namespace: test-namespace
