--- a/pkg/controller/prpqr_reconciler/testdata/zz_fixture_prpqr_TestReconcile_all_jobs_are_aborted_remove_dependant_prowjobs_finali_er.yaml
+++ b/pkg/controller/prpqr_reconciler/testdata/zz_fixture_prpqr_TestReconcile_all_jobs_are_aborted_remove_dependant_prowjobs_finali_er.yaml
@@ -1,6 +1,4 @@
-- apiVersion: ci.openshift.io/v1
-  kind: PullRequestPayloadQualificationRun
-  metadata:
+- metadata:
     creationTimestamp: null
     name: prpqr-test
     namespace: test-namespace
