--- a/pkg/controller/prpqr_reconciler/testdata/zz_fixture_prpqr_TestReconcile_basic_aggregated_case_with_scheduling.yaml
+++ b/pkg/controller/prpqr_reconciler/testdata/zz_fixture_prpqr_TestReconcile_basic_aggregated_case_with_scheduling.yaml
@@ -1,6 +1,4 @@
-- apiVersion: ci.openshift.io/v1
-  kind: PullRequestPayloadQualificationRun
-  metadata:
+- metadata:
     creationTimestamp: null
     name: prpqr-test
     namespace: test-namespace
