UPDATE=true make test

--- a/pkg/steps/multi_stage/testdata/zz_fixture_TestGenerateObservers.yaml
+++ b/pkg/steps/multi_stage/testdata/zz_fixture_TestGenerateObservers.yaml
@@ -133,6 +133,8 @@
       - mountPath: /tmp/entrypoint-wrapper
         name: entrypoint-wrapper
     nodeName: node-name
+    nodeSelector:
+      kubernetes.io/arch: amd64
     restartPolicy: Never
     serviceAccountName: test
     terminationGracePeriodSeconds: 5
@@ -287,6 +289,8 @@
       - mountPath: /tmp/entrypoint-wrapper
         name: entrypoint-wrapper
     nodeName: node-name
+    nodeSelector:
+      kubernetes.io/arch: amd64
     restartPolicy: Never
     serviceAccountName: test
     terminationGracePeriodSeconds: 18
