--- a/pkg/steps/multi_stage/testdata/zz_fixture_TestGeneratePods.yaml
+++ b/pkg/steps/multi_stage/testdata/zz_fixture_TestGeneratePods.yaml
@@ -143,6 +143,8 @@
       - mountPath: /tmp/entrypoint-wrapper
         name: entrypoint-wrapper
     nodeName: node-name
+    nodeSelector:
+      kubernetes.io/arch: amd64
     restartPolicy: Never
     serviceAccountName: test
     terminationGracePeriodSeconds: 25
@@ -312,6 +314,8 @@
       - mountPath: /tmp/entrypoint-wrapper
         name: entrypoint-wrapper
     nodeName: node-name
+    nodeSelector:
+      kubernetes.io/arch: amd64
     restartPolicy: Never
     serviceAccountName: test
     terminationGracePeriodSeconds: 18
@@ -477,6 +481,8 @@
       - mountPath: /tmp/entrypoint-wrapper
         name: entrypoint-wrapper
     nodeName: node-name
+    nodeSelector:
+      kubernetes.io/arch: amd64
     restartPolicy: Never
     serviceAccountName: test
     terminationGracePeriodSeconds: 18
@@ -654,6 +660,8 @@
       - mountPath: /tmp/entrypoint-wrapper
         name: entrypoint-wrapper
     nodeName: node-name
+    nodeSelector:
+      kubernetes.io/arch: amd64
     restartPolicy: Never
     serviceAccountName: test
     terminationGracePeriodSeconds: 18
