--- a/pkg/steps/testdata/zz_fixture_TestPodStepExecution_Successful_pod_with_cloning.yaml
+++ b/pkg/steps/testdata/zz_fixture_TestPodStepExecution_Successful_pod_with_cloning.yaml
@@ -117,6 +117,8 @@ spec:
     volumeMounts:
     - mountPath: /tools
       name: tools
+  nodeSelector:
+    kubernetes.io/arch: amd64
   restartPolicy: Never
   volumes:
   - emptyDir: {}
