--- a/test/integration/cluster-init/create/expected/core-services/ci-secret-bootstrap/_config.yaml
+++ b/test/integration/cluster-init/create/expected/core-services/ci-secret-bootstrap/_config.yaml
@@ -275,7 +275,7 @@ secret_configs:
         registry_url: registry.ci.openshift.org
       - auth_field: auth
         item: quay-io-push-credentials
-        registry_url: quay.io/openshift/ci
+        registry_url: quay.io/openshift
   to:
   - cluster: newCluster
     name: registry-push-credentials-ci-central
