--- a/test/integration/cluster-init/create/expected/core-services/ci-secret-bootstrap/_config.yaml
+++ b/test/integration/cluster-init/create/expected/core-services/ci-secret-bootstrap/_config.yaml
@@ -309,7 +309,10 @@ secret_configs:
         registry_url: quay-proxy.ci.openshift.org
       - auth_field: auth
         item: quayio-ci-read-only-robot
-        registry_url: quay.io/openshift/
+        registry_url: quay.io/openshift/ci
+      - auth_field: auth
+        item: quayio-ci-read-only-robot
+        registry_url: quay.io/openshift/network-edge-testing
       - auth_field: auth
         item: quayio-ci-read-only-robot
         registry_url: qci-pull-through-cache-us-east-1-ci.apps.ci.l2s4.p1.openshiftapps.com
