feat(cluster-init): update managed_clusters group

--- a/test/integration/cluster-init/update/expected/core-services/ci-secret-bootstrap/_config.yaml
+++ b/test/integration/cluster-init/update/expected/core-services/ci-secret-bootstrap/_config.yaml
@@ -5,6 +5,8 @@ cluster_groups:
   - app.ci
   - build01
   - existingCluster
+  managed_clusters:
+  - existingCluster
   non_app_ci:
   - arm01
   - build01
