--- a/test/integration/cluster-init/update/expected/core-services/ci-secret-bootstrap/_config.yaml
+++ b/test/integration/cluster-init/update/expected/core-services/ci-secret-bootstrap/_config.yaml
@@ -348,6 +348,17 @@ secret_configs:
   - cluster: existingCluster
     name: ci-operator
     namespace: test-credentials
+- from:
+    existingCluster-id:
+      field: existingCluster-id
+      item: dex
+    existingCluster-secret:
+      field: existingCluster-secret
+      item: dex
+  to:
+  - cluster: app.ci
+    name: existingCluster-secret
+    namespace: dex
 user_secrets_target_clusters:
 - arm01
 - existingCluster
