fix(cluster-init): dex rh sso

--- a/test/integration/cluster-init/create-ocp/expected/core-services/ci-secret-bootstrap/_config.yaml
+++ b/test/integration/cluster-init/create-ocp/expected/core-services/ci-secret-bootstrap/_config.yaml
@@ -353,7 +353,7 @@ secret_configs:
     name: newCluster-dex-oidc
     namespace: ci
 - from:
-    client-secret:
+    clientSecret:
       field: newCluster-secret
       item: dex
   to:
