--- a/test/integration/cluster-init/update-ocp/expected/core-services/ci-secret-bootstrap/_config.yaml
+++ b/test/integration/cluster-init/update-ocp/expected/core-services/ci-secret-bootstrap/_config.yaml
@@ -363,7 +363,7 @@ secret_configs:
     name: existingCluster-dex-oidc
     namespace: ci
 - from:
-    client-secret:
+    clientSecret:
       field: existingCluster-secret
       item: dex
   to:
