--- a/test/integration/cluster-init/update-build99/expected/core-services/ci-secret-bootstrap/_config.yaml
+++ b/test/integration/cluster-init/update-build99/expected/core-services/ci-secret-bootstrap/_config.yaml
@@ -349,6 +349,23 @@ secret_configs:
     name: ci-operator
     namespace: test-credentials
 - from:
+    .dockerconfigjson:
+      dockerconfigJSON:
+      - auth_field: token_image-pusher_build99_reg_auth_value.txt
+        item: build_farm
+        registry_url: image-registry.openshift-image-registry.svc:5000
+      - auth_field: token_multi-arch-builder-controller_build99_reg_auth_value.txt
+        item: build_farm
+        registry_url: registry.multi-build01.arm-build.devcluster.openshift.com
+      - auth_field: token_image-pusher_app.ci_reg_auth_value.txt
+        item: build_farm
+        registry_url: registry.ci.openshift.org
+  to:
+  - cluster: build99
+    name: multi-arch-builder-controller-build99-registry-credentials
+    namespace: ci
+    type: kubernetes.io/dockerconfigjson
+- from:
     build99-id:
       field: build99-id
       item: dex
