use the prowjob-dispatcher client to determine the cluster for jobs

--- a/pkg/controller/prpqr_reconciler/testdata/zz_fixture_prowjobs_TestReconcile_basic_aggregated_case.yaml
+++ b/pkg/controller/prpqr_reconciler/testdata/zz_fixture_prowjobs_TestReconcile_basic_aggregated_case.yaml
@@ -18,7 +18,6 @@
     resourceVersion: "1"
   spec:
     agent: kubernetes
-    cluster: cluster-name-overwritten
     decoration_config:
       skip_cloning: true
       timeout: 6h0m0s
@@ -118,7 +117,7 @@
     resourceVersion: "1"
   spec:
     agent: kubernetes
-    cluster: cluster-name-overwritten
+    cluster: build02
     decoration_config:
       skip_cloning: true
     extra_refs:
@@ -204,7 +203,7 @@
     resourceVersion: "1"
   spec:
     agent: kubernetes
-    cluster: cluster-name-overwritten
+    cluster: build02
     decoration_config:
       skip_cloning: true
     extra_refs:
