--- a/pkg/controller/prpqr_reconciler/testdata/zz_fixture_prowjobs_TestReconcile_basic_case_without_PR__testing_specified_base.yaml
+++ b/pkg/controller/prpqr_reconciler/testdata/zz_fixture_prowjobs_TestReconcile_basic_case_without_PR__testing_specified_base.yaml
@@ -21,7 +21,7 @@
     resourceVersion: "1"
   spec:
     agent: kubernetes
-    cluster: cluster-name-overwritten
+    cluster: build02
     decoration_config:
       skip_cloning: true
     extra_refs:
