--- a/pkg/controller/prpqr_reconciler/testdata/zz_fixture_prpqr_TestReconcile_basic_case_where_test_name_is_not_found.yaml
+++ b/pkg/controller/prpqr_reconciler/testdata/zz_fixture_prpqr_TestReconcile_basic_case_where_test_name_is_not_found.yaml
@@ -1,7 +1,5 @@
 - metadata:
     creationTimestamp: null
-    finalizers:
-    - pullrequestpayloadqualificationruns.ci.openshift.io/dependent-prowjobs
     name: prpqr-test
     namespace: test-namespace
     resourceVersion: "1000"
@@ -13,10 +11,10 @@
         specifier: informing
       releaseJobSpec:
       - ciOperatorConfig:
-          branch: test-branch
-          org: test-org
-          repo: test-repo
-        test: test-name-metal
+          branch: master
+          org: openshift
+          repo: release
+        test: missing
     payload: {}
     pullRequests:
     - baseRef: test-branch
@@ -31,14 +29,16 @@
   status:
     conditions:
     - lastTransitionTime: "1970-01-01T00:00:00Z"
-      message: All jobs triggered successfully
-      reason: AllJobsTriggered
-      status: "True"
+      message: Jobs triggered with errors
+      reason: WithErrors
+      status: "False"
       type: AllJobsTriggered
     jobs:
-    - jobName: periodic-ci-test-org-test-repo-test-branch-test-name-metal
+    - jobName: periodic-ci-openshift-release-master-missing
       prowJob: some-uuid
       status:
+        description: 'failed to generate prowjob: failed to get cluster for job periodic-ci-openshift-release-master-missing:
+          could not determine cluster for job periodic-ci-openshift-release-master-missing:
+          job: periodic-ci-openshift-release-master-missing not found'
         startTime: "1970-01-01T00:00:00Z"
-        state: triggered
-        url: https://prow.ci.openshift.org/view/gs/test-platform-results/test-org-test-repo-100-test-name-metal
+        state: error
