--- a/pkg/prowgen/testdata/zz_fixture_TestGeneratePeriodicForTest_periodic_with_capabilities.yaml
+++ b/pkg/prowgen/testdata/zz_fixture_TestGeneratePeriodicForTest_periodic_with_capabilities.yaml
@@ -9,6 +9,6 @@ extra_refs:
   repo: repo
 labels:
   capability/arm64: arm64
-  capability/vpn: vpn
+  capability/intranet: intranet
   pj-rehearse.openshift.io/can-be-rehearsed: "true"
 name: periodic-ci-org-repo-branch-testname
