--- a/pkg/prowgen/testdata/zz_fixture_TestGeneratePostSubmitForTest_postsubmit_with_capabilities.yaml
+++ b/pkg/prowgen/testdata/zz_fixture_TestGeneratePostSubmitForTest_postsubmit_with_capabilities.yaml
@@ -7,5 +7,5 @@ decoration_config:
   skip_cloning: true
 labels:
   capability/arm64: arm64
-  capability/vpn: vpn
+  capability/intranet: intranet
 name: branch-ci-organization-repository-branch-postsubmit
