--- a/pkg/prowgen/testdata/zz_fixture_TestGenerateJobs_periodic_with_capabilities.yaml
+++ b/pkg/prowgen/testdata/zz_fixture_TestGenerateJobs_periodic_with_capabilities.yaml
@@ -9,7 +9,7 @@ periodics:
     org: organization
     repo: repository
   labels:
-    capability/vpn: vpn
+    capability/intranet: intranet
     pj-rehearse.openshift.io/can-be-rehearsed: "true"
   name: periodic-ci-organization-repository-branch-unit
   spec:
